Fix input not showing on desktop

--- a/css/header.scss
+++ b/css/header.scss
@@ -104,6 +104,22 @@ nav {
   }
 }
 
+@media only screen and (min-width: 1250px) {
+  .nav-input {
+    input {
+      display: inline;
+      margin-left: var(--content-spaceing);
+    }
+
+    i {
+      position: absolute;
+      right: 15px;
+      font-size: 20px;
+      color: var(--color-semi-black);
+    }
+  }
+}
+
 .header-buttons {
   white-space: nowrap;
 
